fix(jsdialog): set tab order label width to max-content in ContentControlDialog for proper vertical alignment

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -2825,3 +2825,8 @@ kbd,
 	overflow-x: hidden;
 	overflow-y: auto;
 }
+
+/* Writer - Form - Properties(Dropdown) */
+#ContentControlDialog #tabindexlabel {
+	width: max-content;
+}
